force-app/main/default/objects/Invoice__c/fields/KindOfBill__c.field-meta.xml
<CustomField>
    <fullName>KindOfBill__c</fullName>
    <description>Mapped from the Kind field of the bill object in CLIO</description>
    <label>Kind of Bill</label>
    <length>150</length>
    <type>Text</type>
</CustomField>