force-app/main/default/objects/Invoice__c/fields/Matter__c.field-meta.xml
<CustomField>
    <fullName>Matter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The relationship between Matters and Invoices is one-to-many. Over the course of a legal case (Matter), a law firm may generate multiple invoices to bill the client for the services they have provided and the expenses they have incurred. While an Invoice typically references one or more Matters, a single Matter can be the subject of several invoices issued at different stages of the legal process. This reflects the common billing practice in legal services, where clients are often billed periodically for ongoing work or in stages as a case progresses.</description>
    <label>Matter</label>
    <referenceTo>Matter__c</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>