force-app/main/default/objects/Invoice__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Overdue</fullName>
            </value>
            <value>
                <fullName>void</fullName>
            </value>
            <value>
                <fullName>awaiting_payment</fullName>
            </value>
            <value>
                <fullName>deleted</fullName>
            </value>
            <value>
                <fullName>awaiting_approval</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>