force-app/main/default/objects/Invoice__c/fields/TeamMatter__c.field-meta.xml
<CustomField>
    <fullName>TeamMatter__c</fullName>
    <formula>TEXT(Matter__r.Team__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Team</label>
    <type>Text</type>
</CustomField>