force-app/main/default/objects/Invoice__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Invoice_Number__c</columns>
    <columns>Matter__c</columns>
    <columns>Status__c</columns>
    <columns>Amount__c</columns>
    <columns>Amount_Paid__c</columns>
    <columns>Subtotal__c</columns>
    <columns>Discount__c</columns>
    <columns>Interest__c</columns>
    <columns>Date_Sent__c</columns>
    <columns>Due_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>